nenumetamos laukelių reikšmės kai paspaudžiamas submit

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function Duomenu_siuntimas_i_duombaze($vartotojo_vardas,$vartotojo_pavarde,$vart
 
 	<h2>Registracijos Forma</h2>
 
-	<form method='post' action='index.php'>
+	<form method='post' action='index.html'>
 		<div class="vardas">
 			<div class="col_1_of_2 span_1_of_2">	<input type="text" class="text"  value= "<?php if(isset($_POST['php_vardas'])) echo  $_POST[php_vardas]; else print 'Vardas';?> " name ='php_vardas' onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Vardas';}"></div>
 			<div class="col_1_of_2 span_1_of_2">	<input type="text" class="text" value="<?php if(isset($_POST['php_pavarde'])) echo  $_POST[php_pavarde]; else print 'Pavardė';?> " name ='php_pavarde'onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Pavardė';}"></div>
