--- a/Registracija.html
+++ b/Registracija.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lt">
+<html>
 <head>
 
 <meta charset="utf-8">
@@ -49,12 +49,13 @@
 			</form>
 
 			<div class="gdata">
-			<input id="datepicker" type="text" size="63">
+			<input id="datepicker" type="text">
 			</div>
 
 				<br><br>
-				<input type="submit" onclick="myFunction()" value="Registruotis" >
-			<div class="clear"> </div>
+				<div class="mygtukasREG">
+				<input type="submit" onclick="registracija()" value="Registruotis" >
+				</div>
 
 			<script>
 				$( "#radioset" ).buttonset();
@@ -64,6 +65,7 @@
 			</script>
 
 		</form>
-		</div>
+</div>
+
 </body>
 </html>
