--- a/Prisijungimas.html
+++ b/Prisijungimas.html
@@ -2,40 +2,32 @@
 <html>
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
-    <link href="jquery-ui-1.11.4/jquery-ui.css" rel="stylesheet">
-    <script src="jquery-ui-1.11.4/external/jquery/jquery.js"></script>
-    <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
+<meta charset="utf-8">
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<script src="js/bootstrap.min.js"></script>
 
 </head>
 <body>
 
-<div class="main">
-    <div>
+<form class="text-center aukstis">
 
-            <div class="prisijungimas">
-                 <input type="text" class="text" value="e-mail@stud.vgtu.lt" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'e-mail@stud.vgtu.lt';}">
-            </div>
-
-            <div class="prisijungimas">
-                <input type="password" class="text" value="slaptazodis" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'password';}">
-            </div>
-
-        <form>
-            <div class="mygtukasPRIS">
-                <input type="submit" onclick="prisijungimas()" value="Prisijungti" >
-            </div>
-        </form>
-
-        <form>
-            <div action=Registracija.html" class="mygtukasPRIS">
-                <input type="submit" value="Registruotis">
-            </div>
-        </form>
-
+    <div class="form-group col-lg-4 col-lg-offset-4">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
     </div>
-</div>
+
+    <div class="form-group col-lg-4 col-lg-offset-4">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+
+    <div class="col-lg-4 col-lg-offset-4">
+        <button type="submit" class="btn btn-primary">Prisijungti</button>
+        <button type="submit" class="btn btn-primary">Registruotis</button>
+    </div>
+
+</form>
+
+
 </body>
 </html>
