--- a/Prisijungimas.html
+++ b/Prisijungimas.html
@@ -12,13 +12,13 @@
 <form class="text-center aukstis">
 
     <div class="form-group col-lg-4 col-lg-offset-4">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+        <label for="emailas">Elektroninio pašto adresas</label>
+        <input type="email" class="form-control" id="emailas" placeholder="E-mailas">
     </div>
 
     <div class="form-group col-lg-4 col-lg-offset-4">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="slaptazodis">Slaptažodis</label>
+        <input type="password" class="form-control" id="slaptazodis" placeholder="Slaptažodis">
     </div>
 
     <div class="col-lg-4 col-lg-offset-4">
