Prideti navbarai tope ir bottome, bei pakeistas backgroundas.

--- a/Prisijungimas.html
+++ b/Prisijungimas.html
@@ -7,7 +7,11 @@
 <script src="js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body class="bgSpalva">
+
+<div class="navbar navbar-inverse navbar-fixed-bottom navbar-inner container-fluid"></div>
+<div class="navbar navbar-inverse navbar-fixed-top navbar-inner container-fluid"></div>
+
 
 <form class="text-center aukstis">
 
